tests/vars.ms
// Mutable
let x = 5
console.log(x) // 5
x = 10
console.log(x) // 10

// Inmutable
immut x
//x = 20 //  error

// Const
const z = 2
// z = 3 //error
// immut z // error